--- a/templates/error.html
+++ b/templates/error.html
@@ -39,7 +39,7 @@ MENU
 }
 </style>
 <div class="count">
-    <p>Dont' have this name in Github:</p>
+    <p>This user doesn't exist:</p>
     <div class="f2"><p>{{nick}}</p></div>
 </div>
 <div class="f1"><p1>Check for whitespace</p1></div>
